<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_license_text"
            android:id="@+id/license_text"
            android:textSize="14sp" />
        <TextView
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_gmail"
            android:id="@+id/license_gnulink"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_github_text"
            android:id="@+id/license_github_text"
            android:textSize="14sp" />

        <TextView
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_github_link"
            android:id="@+id/license_githublink"
            android:textSize="14sp" />


    </LinearLayout>


</ScrollView>